scripts/nullaway/annotator/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8.txt
../annotator/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:75: error: [NullAway] initializer method does not guarantee @NonNull fields tc (line 57), world (line 67) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public NUIController(float x, float y) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Rectangle.java:147: error: [NullAway] dereferenced expression other is @Nullable
				PVector anchor = transformToLocalSpace(new PVector(other.getX(), other.getY()));
				                                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/TextField.java:345: error: [NullAway] dereferenced expression textCanvas is @Nullable
		return textCanvas.textWidth(getText().substring(0, index)) + textOffset;
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Circle.java:131: error: [NullAway] dereferenced expression other is @Nullable
				PVector anchor = transformToLocalSpace(new PVector(other.getX(), other.getY()));
				                                                        ^
    (see http://t.uber.com/nullaway )
4 errors
